# academic_citations

./: .gitignore  Args.md  README.md  argument_checkers.py  command_handlers.py  crossref.py  crossref_cli.py  pyproject.toml  repodoc_config.yml  requirements.txt  setup.cfg  survsys.json  t.json  test_crossref.py
crossref/: __init__.py  argument_checkers.py  argument_parsers.py  command_handlers.py  crossref_cli.py  utils.py
docs/: .gitignore  api.rst  conf.py  contents.rst  index.rst  requirements.txt
examples/: arxiv.py  arxivcli.txt  error_feed.atom  machine_learning.atom  query.atom
