[metadata]
name = crossref
version = 0.1.2
description = "A Python wrapper for the Crossref API"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TralahM/academic_citations
author = TralahM
author_email = briantralah@gmail.com
license = MIT

[options]
packages = find:
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    crossref = crossref.crossref_cli:main
